Modified code according to the suggestions